tests/ui/rename/test_rename_path.stderr
error: Unexpected field `rename`
 --> $DIR/test_rename_path.rs:5:17
  |
5 |     #[shorthand(rename)]
  |                 ^^^^^^
